syntax = "proto3";

option go_package = "github.com/lshtar13/blockchain/node/global";

package global;

import "protos/types.proto";

service BlkSrv {
  rpc ReqBlk(BlkReq) returns (stream protos.Blk);
  rpc SendBlk(protos.Blk) returns (protos.Ack);
}

message BlkReq { repeated bytes hash = 1; }
